# backup-restore

./: Cargo.toml  README.md  deny.toml  setup.sh  sonar-project.properties
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/audit/: 2026-02-27-audit.md
docs/plans/: 2026-02-27-code-quality-design.md  2026-02-27-code-quality-implementation.md
src/: conflict.rs  copy.rs  lib.rs  main.rs  plan.rs  report.rs  scan.rs  types.rs
tests/: integration.rs
