[package]
name = "backup-restore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dialoguer = { version = "0.11", default-features = false }
indicatif = "0.17"
rayon = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Intentional: byte counts displayed as f64 for human-readable formatting
cast_precision_loss = "allow"
# Noisy without value for a CLI tool
must_use_candidate = "allow"
# Error types are self-evident from Result signatures
missing_errors_doc = "allow"
# Panics are in infallible template strings, not public API concerns
missing_panics_doc = "allow"
